# ZenSSH

./: .gitmodules  LICENSE-COMMONS-CLAUSE.txt  LICENSE.txt  README.md  README_cn.md  README_en.md  index.html  io.github.kischang.zenssh.metainfo.xml  io.github.kischang.zenssh.yml  package.json  vite.config.js
.github/workflows/: android.yaml  ci.yaml  linux.yaml  macos.yaml  win.yaml  win32.yaml
src/: App.vue  IndexMobile.vue  IndexPc.vue  commons.js  main.js  request.js  store.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: encrypt.rs  lib.rs  main.rs  monitor.rs  serial.rs  sftp.rs  ssh.rs
src/locales/: en.json  zh.json
src/mobile/: MobileCredential.vue  MobileHost.vue  MobileSetting.vue  MobileTerminal.vue  key-btn.vue  keyboard.vue
src/pc/: TerminalTabs.vue
src/styles/: variables.scss
src/subs/: ConnectForm.vue  CredentialForm.vue  ServerMonitor.vue  SettingForm.vue  SftpFileBrowser.vue  Terminal.vue  TextEditor.vue
src/utils/: XtermTheme.ts  plugin-keyring.ts  theme.js  webdav.js
src/views/: ConnectManage.vue  CredentialManage.vue  TerminalTabs.vue
