[package]
name = "ZenSSH"
version = "0.1.0"
description = "SSH client"
authors = ["KisChang"]
edition = "2021"

[lib]
name = "zenssh_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
tauri-plugin-haptics = "2"
tauri-plugin-os = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
# add deps
# 不用aws-lc以简化在windows上的交叉编译难度
russh = { version = "0.56", default-features = false, features = ["ring", "flate2", "rsa"] }
russh-sftp = "2"
tauri-plugin-keyring = { git = "https://github.com/IT-ess/tauri-plugin-keyring", branch = "feat/add-linux-support" }
ring = "0.17"                  # 加密库
rand = "0.8"                   # 随机数
data-encoding = "2.5.0"        # base64/hex 编码
# keep background
tauri-plugin-keep-screen-on = "0.1"
tauri-plugin-android-battery-optimization = "0.1"

anyhow = "1.0.100"
log = "0.4"
tokio = "1.48.0"
tokio-util = "0.7"
once_cell = "1.21.3"

[dev-dependencies]
#tauri-plugin-devtools = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
